# mdacli

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .gitignore  .readthedocs.yml  CNAME  MANIFEST.in  README.md  README.rst  cli_main.py  index.html  meta.yaml  pyproject.toml  setup.cfg  setup.py  sitemap_index.xml  tox.ini  versions.json
.github/workflows/: build.yml  build_conda.yml  build_pypi.yml  ci-testing.yml  docs.yml  lint.yml  pr-docs-preview.yml  pr.yml  py36.yml  py37.yml  py38.yml  py39.yml  release.yml  test.yml  tests.yml  version-bump-and-package.yml
0.1.26/: objects.inv  philosophy.html  readme.html  search.html  searchindex.js  sitemap.xml
0.1.26/_modules/: index.html
0.1.26/_modules/mdacli/: libcli.html  utils.html
0.1.26/api/: cli.html  libcli.html  save.html  utils.html
0.1.27/: api.html  authors.html  contributing.html  objects.inv  py-modindex.html  readme.html  search.html  sitemap.xml
0.1.27/_modules/: index.html
0.1.27/_modules/mdacli/: cli.html  colors.html  logger.html  save.html  utils.html
0.1.27/_sources/: installation.rst.txt
0.1.27/_sources/api/: save.rst.txt
0.1.27/api/: cli.html  colors.html  libcli.html  logger.html  utils.html
0.1.28/: api.html  contributing.html  index.html  installation.html  philosophy.html  py-modindex.html  search.html  searchindex.js  sitemap.xml  usage.html
0.1.28/_modules/: index.html
0.1.28/_modules/mdacli/: colors.html  logger.html  utils.html
0.1.28/_sources/: api.rst.txt
0.1.28/_sources/api/: libcli.rst.txt
0.1.28/_static/: opensearch.xml
0.1.28/api/: cli.html  libcli.html  utils.html
0.1.29/: changelog.html  contributing.html  genindex.html  index.html  philosophy.html  readme.html  search.html  sitemap.xml  usage.html
0.1.29/_modules/: index.html
0.1.29/_modules/mdacli/: colors.html  libcli.html  logger.html
0.1.29/api/: cli.html  colors.html  libcli.html  save.html  utils.html
0.1.30/: api.html  authors.html  changelog.html  contributing.html  philosophy.html  py-modindex.html  readme.html  search.html  searchindex.js  sitemap.xml  usage.html
0.1.30/_modules/: index.html
0.1.30/_modules/mdacli/: cli.html  colors.html  save.html  utils.html
0.1.30/_static/: opensearch.xml
0.1.30/api/: cli.html  colors.html  libcli.html  logger.html  utils.html
0.1.31/: api.html  authors.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  philosophy.html  readme.html  searchindex.js  sitemap.xml
0.1.31/_modules/mdacli/: cli.html  colors.html  save.html
0.1.31/_sources/: usage.rst.txt
0.1.31/_static/: documentation_options.js  opensearch.xml
0.1.31/api/: cli.html  colors.html  libcli.html  logger.html  save.html  utils.html
0.1.32/: contributing.html  index.html  installation.html  search.html  searchindex.js  sitemap.xml
0.1.32/_modules/mdacli/: libcli.html
0.1.32/_sources/: index.rst.txt
0.1.32/_static/: documentation_options.js
0.1.32/api/: logger.html  utils.html
data/: topol.tpr  traj.trr
dev/: api.html  authors.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  philosophy.html  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
dev/_modules/: index.html
dev/_modules/mdacli/: cli.html  colors.html  libcli.html  logger.html  save.html  utils.html
dev/api/: cli.html  colors.html  libcli.html  logger.html  save.html  utils.html
developer/: check_changelog.py  clean_dist_check.py  update_json_stubs_sitemap.py
devtools/: check_changelog.py  docs_requirements.txt  update_json_stubs_sitemap.py
devtools/conda/: environment.yml
devtools/conda/mdacli/: build.sh  meta.yaml
docs/: AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  PULLREQUEST.rst  requirements.txt
docs/rst/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  philosophy.rst  usage.rst
docs/rst/_static/logos/: AUTHOR
docs/rst/api/: cli.rst  colors.rst  libcli.rst  logger.rst  save.rst  utils.rst
docs/rst/reference/: index.rst  mdacli.rst
docs/src/: conf.py  index.rst  installation.rst  philosophy.rst  tab-completion.rst
latest/: .buildinfo  api.html  authors.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  philosophy.html  py-modindex.html  search.html  searchindex.js  sitemap.xml  tab-completion.html  usage.html
latest/_modules/: index.html
latest/_modules/mdacli/: cli.html  colors.html  libcli.html  logger.html  save.html  utils.html
latest/_sources/: api.rst.txt  index.rst.txt  philosophy.rst.txt  usage.rst.txt
latest/_sources/api/: utils.rst.txt
latest/_static/: documentation_options.js  opensearch.xml
latest/api/: cli.html  colors.html  libcli.html  logger.html  save.html  utils.html
src/mdacli/: __init__.py  __main__.py  cli.py  colors.py  libcli.py  logger.py  save.py  utils.py
stable/: api.html  authors.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  philosophy.html  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
stable/_modules/: index.html
stable/_modules/mdacli/: cli.html  colors.html  libcli.html  logger.html  save.html  utils.html
stable/_static/: documentation_options.js  opensearch.xml
stable/api/: cli.html  colors.html  libcli.html  logger.html  save.html  utils.html
tests/: __init__.py  example.json  run_tester  test_cli.py  test_cli_main.py  test_libcli.py  test_logger.py  test_save.py  test_utils.py
tests/tester/: __init__.py  __main__.py  tester_class.py
