[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdacli"
version = "0.1.29"
description = "A command line client for MDAnalysis Analysis classes."
authors = [
    {name = "MDAnalysis Development Team and contributors", email = "mdanalysis@numfocus.org"},
]
readme = "README.rst"
requires-python = ">=3.8"
keywords = [
    "python",
    "cli",
    "science",
    "command-line",
    "molecular-dynamics",
    "computational-chemistry",
    "molecular-dynamics-simulation",
    "command-line-tool",
    "trajectory-analysis mdanalysis",
]
license = {text = "GPL-3.0-or-later"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]

dependencies = [
    "MDAnalysis>=2.1.0",
    "threadpoolctl",
]

[project.urls]
homepage = "https://mdacli.mdanalysis.org"
documentation = "https://mdacli.mdanalysis.org"
repository = "https://github.com/MDAnalysis/mdacli"
changelog = "https://github.com/MDAnalysis/mdacli/blob/main/docs/CHANGELOG.rst"
issues = "https://github.com/MDAnalysis/mdacli/issues/"
discord = "https://discord.com/channels/807348386012987462"
twitter = "https://twitter.com/mdanalysis"
blog = "https://www.mdanalysis.org/blog"
user_group = " https://groups.google.com/g/mdnalysis-discussion"

[project.scripts]
mda = "mdacli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max_line_length = 80
hang-closing = true
ignore = [
    "W293",
    "W503",
    "D412",
    "D105",
]
docstring-convention = "numpy"

[tool.isort]
line_length = 80
indent = 4
multi_line_output = 8
include_trailing_comma = true
lines_after_imports = 2
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "mdacli"
known_third_party = [
    "MDAnalysis",
    "hypothesis",
    "matplotlib",
    "numpy",
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-p pytest_cov"
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
testpaths = [
    "tests"
]
