[metadata]
name = mdacli
version = attr:mdacli.__version__
description = A command line client for MDAnalysis Analysis classes.
long_description =
    file: README.rst
    file: docs/CHANGELOG.rst
long_description_content_type = text/x-rst
license = GPLv3
license_files = LICENSE
url = https://github.com/MDAnalysis/mdacli
author = attr:pycoulomb.__authors__
author_email = mdanalysis@numfocus.org

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Moduless
    Topic :: System :: Shells

keywords =
    Science
    Molecular Dynamics
    MDAnalysis

python_requires = >=3.7

project_urls =
    Source = https://github.com/MDAnalysis/mdacli
    Documentation = https://mdacli.readthedocs.io/en/latest/
    Changelog = https://github.com/MDAnalysis/mdacli/blob/main/docs/CHANGELOG.rst
    User Group = https://groups.google.com/g/mdnalysis-discussion/
    Issue Tracker = https://github.com/MDAnalysis/mdacli/issues
    Discord = https://discord.com/channels/807348386012987462/
    Blog = https://www.mdanalysis.org/blog/
    Twitter = https://twitter.com/mdanalysis

[options]
package_dir=
    =src
packages = find:

install_requires =
    MDAnalysis>=2.1.0
    threadpoolctl

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    mda = mdacli.__main__:main

[bdist_wheel]
universal=1
